--- a/PowerMetal/MetalPowOTT/METALPOWOTT.html
+++ b/PowerMetal/MetalPowOTT/METALPOWOTT.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<script>
-			window.location.replace("https://metalpowotttv.vercel.app/");
+			window.location.replace("https://metalpowott.vercel.app/");
 		</script>
 	</head>
 </html>
