--- a/PowerMetal/MetalPowOTT/METALPOWOTT.html
+++ b/PowerMetal/MetalPowOTT/METALPOWOTT.html
@@ -282,11 +282,11 @@ https://streaming.livescorethai.net/iptv/sd-moviehits.stream/playlist.m3u8
 #EXTVLCOPT:http-referrer=https://wacth.tv/
 https://media.wacthstream.com/stream_live/445_SparkJump/playlist.m3u8?wmsAuthSign=c2VydmVyX3RpbWU9OC8xOC8yMDI0IDg6MTY6MjkgUE0maGFzaF92YWx1ZT1UQVdzUS9CdDhPY3ZjZndWWUkrYnZnPT0mdmFsaWRtaW51dGVzPTg2NDAwMDAwJnN0cm1fbGVuPTAmaWQ9Y2hfNTgzMjE=
 
-#EXTINF:-1 group-title="True Visions" tvg-id="True Series" tvg-logo="https://dookeela.live/uploads/1719205991.png", True Series-SD
+#EXTINF:-1 group-title="True Visions" tvg-name="True Series" tvg-id="TrueSeries.th" tvg-logo="https://dookeela.live/uploads/1719205991.png", True Series
 #EXTVLCOPT:http-referrer=https://freetvdd.com
 https://streaming.livescorethai.net/iptv/sd-series.stream/playlist.m3u8
 
-#EXTINF:-1 ch-number="" tvg-name="True Series" tvg-id="True Series" tvg-logo="https://dookeela.live/uploads/1719205991.png" group-title="True Visions", TRUE Series HD
+#EXTINF:-1 ch-number="" tvg-name="True Series" tvg-id="TrueSeries.th" tvg-logo="https://dookeela.live/uploads/1719205991.png" group-title="True Visions", True Series
 #EXTVLCOPT:http-referrer=https://wacth.tv
 https://media.wacthstream.com/stream_live/240_True_Series./playlist.m3u8?wmsAuthSign=c2VydmVyX3RpbWU9OC8xOC8yMDI0IDg6MTY6MjkgUE0maGFzaF92YWx1ZT1UQVdzUS9CdDhPY3ZjZndWWUkrYnZnPT0mdmFsaWRtaW51dGVzPTg2NDAwMDAwJnN0cm1fbGVuPTAmaWQ9Y2hfNTgzMjE=
 
@@ -335,23 +335,23 @@ https://streaming.livescorethai.net/iptv/sd-tsport5.stream/playlist.m3u8?wmsAuth
 #EXTVLCOPT:http-referrer=https://streaming.livescorethai.net/
 https://streaming.livescorethai.net/iptv/sd-tsport7.stream/playlist.m3u8?wmsAuthSign=
 
-#EXTINF:-1 group-title="True Visions" tvg-logo="https://dookeela.live/uploads/1664499665.png"  ,True Premier Football HD 1
+#EXTINF:-1 tvg-id="TruePremierFootball1.th" group-title="True Visions" tvg-logo="https://dookeela.live/uploads/1664499665.png"  ,TTrue Premier Football 1
 #EXTVLCOPT:http-referrer=https://streaming.livescorethai.net/
 https://streaming.livescorethai.net/iptv/epl-1.stream/playlist.m3u8?wmsAuthSign=
 
-#EXTINF:-1 group-title="True Visions" tvg-logo="https://dookeela.live/uploads/1664499673.png"  ,True Premier Football HD 2
+#EXTINF:-1 tvg-id="TruePremierFootball2.th" group-title="True Visions" tvg-logo="https://dookeela.live/uploads/1664499673.png"  ,True Premier Football 2
 #EXTVLCOPT:http-referrer=https://streaming.livescorethai.net/
 https://streaming.livescorethai.net/iptv/epl-2.stream/playlist.m3u8?wmsAuthSign=
 
-#EXTINF:-1 group-title="True Visions" tvg-logo="https://dookeela.live/uploads/1664499681.png"  ,True Premier Football HD 3
+#EXTINF:-1 tvg-id="TruePremierFootball3.th" group-title="True Visions" tvg-logo="https://dookeela.live/uploads/1664499681.png"  ,True Premier Football 3
 #EXTVLCOPT:http-referrer=https://streaming.livescorethai.net/
 https://streaming.livescorethai.net/iptv/epl-3.stream/playlist.m3u8?wmsAuthSign=
 
-#EXTINF:-1 group-title="True Visions" tvg-logo="https://dookeela.live/uploads/1664499692.png"  ,True Premier Football HD 4
+#EXTINF:-1 tvg-id="TruePremierFootball4.th" group-title="True Visions" tvg-logo="https://dookeela.live/uploads/1664499692.png"  ,True Premier Football 4
 #EXTVLCOPT:http-referrer=https://streaming.livescorethai.net/
 https://streaming.livescorethai.net/iptv/epl-4.stream/playlist.m3u8?wmsAuthSign=
 
-#EXTINF:-1 group-title="True Visions" tvg-logo="https://dookeela.live/uploads/1664499700.png"  ,True Premier Football HD 5
+#EXTINF:-1 tvg-id="TruePremierFootball5.th" group-title="True Visions" tvg-logo="https://dookeela.live/uploads/1664499700.png"  ,True Premier Football 5
 #EXTVLCOPT:http-referrer=https://streaming.livescorethai.net/
 https://streaming.livescorethai.net/iptv/epl-5.stream/playlist.m3u8?wmsAuthSign=
 
@@ -362,6 +362,24 @@ https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/spotv1/playlist.m3u8
 #EXTINF:-1 group-title="True Visions" tvg-logo="https://dookeela.live/uploads/1664529575.png"  ,True SPOTV2
 #EXTVLCOPT:http-referrer=https://www.dooball2you.com/
 https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/spotv2/playlist.m3u8
+
+#EXTINF:-1 group-title="TRUEVISION NOW" tvg-id="true-ball-thai-1" tvg-logo="https://cms.dmpcdn.com/livetv/2023/08/02/89262f60-30e1-11ee-b445-3703761d6f4d_webp_original.webp",True Ball Thai 1
+#EXTVLCOPT:http-user-agent=AISPlay/2.9.17.29 (Linux;Android 11) ExoPlayerLib/2.9.6
+#EXTVLCOPT:http-referrer=https://www.dooballrealtime.com
+https://cdn1.googlecdn.live/dooballrealtime/trueballthai1/playlist.m3u8
+
+#EXTINF:-1 group-title="TRUEVISION NOW" tvg-id="true-ball-thai-2" tvg-logo="https://cms.dmpcdn.com/livetv/2023/08/02/89262f60-30e1-11ee-b445-3703761d6f4d_webp_original.webp",true-ball-thai-2
+#EXTVLCOPT:http-referrer=https://www.dooballrealtime.com
+https://cdn1.googlecdn.live/dooballrealtime/trueballthai2/playlist.m3u8
+
+#EXTINF:-1 group-title="TRUEVISION NOW" tvg-id="true-ball-thai-3" tvg-logo="https://cms.dmpcdn.com/livetv/2023/08/02/89262f60-30e1-11ee-b445-3703761d6f4d_webp_original.webp",True Ball Thai 3
+#EXTVLCOPT:http-referrer=https://www.dooballrealtime.com
+https://cdn1.googlecdn.live/dooballrealtime/trueballthai3/playlist.m3u8
+
+#EXTINF:-1 group-title="TRUEVISION NOW" tvg-id="true-ball-thai-4" tvg-logo="https://cms.dmpcdn.com/livetv/2023/08/02/89262f60-30e1-11ee-b445-3703761d6f4d_webp_original.webp",True Ball Thai 4
+#EXTVLCOPT:http-referrer=https://www.dooballrealtime.com
+https://cdn1.googlecdn.live/dooballrealtime/trueballthai4/playlist.m3u8
+
 
 
 
