--- a/PowerMetal/MetalPowOTT/METALPOWOTT.html
+++ b/PowerMetal/MetalPowOTT/METALPOWOTT.html
@@ -286,7 +286,7 @@ https://media.wacthstream.com/stream_live/445_SparkJump/playlist.m3u8?wmsAuthSig
 #EXTVLCOPT:http-referrer=https://freetvdd.com
 https://streaming.livescorethai.net/iptv/sd-series.stream/playlist.m3u8
 
-#EXTINF:-1 ch-number="" tvg-name="True Series" tvg-id="TrueSeries.th" tvg-logo="https://dookeela.live/uploads/1719205991.png" group-title="True Visions", True Series
+#EXTINF:-1 ch-number="" tvg-name="True Series" tvg-id="TrueSeries.th" tvg-logo="https://dookeela.live/uploads/1719205991.png" group-title="True Visions", True Series (สำรอง)
 #EXTVLCOPT:http-referrer=https://wacth.tv
 https://media.wacthstream.com/stream_live/240_True_Series./playlist.m3u8?wmsAuthSign=c2VydmVyX3RpbWU9OC8xOC8yMDI0IDg6MTY6MjkgUE0maGFzaF92YWx1ZT1UQVdzUS9CdDhPY3ZjZndWWUkrYnZnPT0mdmFsaWRtaW51dGVzPTg2NDAwMDAwJnN0cm1fbGVuPTAmaWQ9Y2hfNTgzMjE=
 
