--- a/PowerMetal/MetalPowOTT/METALPOWOTT.html
+++ b/PowerMetal/MetalPowOTT/METALPOWOTT.html
@@ -7,7 +7,7 @@
 </html>
 # Playlist Name:Metal&Pow
 
-
+#EXTM3U
 
 
 =========================================== MetalPow logo ===========================================
