--- a/PowerMetal/MetalPowOTT/METALPOWOTT.html
+++ b/PowerMetal/MetalPowOTT/METALPOWOTT.html
@@ -7,8 +7,129 @@
 </html>
 # Playlist Name:Metal&Pow
 
-#EXTM3U
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#EXTM3U
+#EXTM3U billed-msg="Metal&Pow OTT เฉพาะสมาชิคเท่านั้น สนใจแอพดูหนัง ซีรี่ย์ อนิเมะ ติดต่อได้ที่ LineID: taltim"
 
 =========================================== MetalPow logo ===========================================
 #EXTINF:-1 group-logo="https://raw.githubusercontent.com/powmetal/Powermetal/main/PowerMetal/Assets/%E0%B9%82%E0%B8%A5%E0%B9%82%E0%B8%81%E0%B9%89.jpg" 
