--- a/PowerMetal/MetalPowOTT/METALPOWOTT.html
+++ b/PowerMetal/MetalPowOTT/METALPOWOTT.html
@@ -516,6 +516,26 @@ https://media.wacthstream.com/stream_live/568_BBC_Earth/playlist.m3u8?wmsAuthSig
 #EXTVLCOPT:http-user-agent=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.138 Safari/537.36
 https://streaming.livescorethai.net/iptv/hd-lifetime.stream/playlist.m3u8|Referer=https://freetvdd.com/
 
+#EXTINF:-1 tvg-id="TruePremierFootball1.th" group-title="True Visions" tvg-logo="https://dookeela.live/uploads/1664499665.png"  ,TTrue Premier Football 1
+#EXTVLCOPT:http-referrer=https://streaming.livescorethai.net/
+https://streaming.livescorethai.net/iptv/epl-1.stream/playlist.m3u8?wmsAuthSign=
+
+#EXTINF:-1 tvg-id="TruePremierFootball2.th" group-title="True Visions" tvg-logo="https://dookeela.live/uploads/1664499673.png"  ,True Premier Football 2
+#EXTVLCOPT:http-referrer=https://streaming.livescorethai.net/
+https://streaming.livescorethai.net/iptv/epl-2.stream/playlist.m3u8?wmsAuthSign=
+
+#EXTINF:-1 tvg-id="TruePremierFootball3.th" group-title="True Visions" tvg-logo="https://dookeela.live/uploads/1664499681.png"  ,True Premier Football 3
+#EXTVLCOPT:http-referrer=https://streaming.livescorethai.net/
+https://streaming.livescorethai.net/iptv/epl-3.stream/playlist.m3u8?wmsAuthSign=
+
+#EXTINF:-1 tvg-id="TruePremierFootball4.th" group-title="True Visions" tvg-logo="https://dookeela.live/uploads/1664499692.png"  ,True Premier Football 4
+#EXTVLCOPT:http-referrer=https://streaming.livescorethai.net/
+https://streaming.livescorethai.net/iptv/epl-4.stream/playlist.m3u8?wmsAuthSign=
+
+#EXTINF:-1 tvg-id="TruePremierFootball5.th" group-title="True Visions" tvg-logo="https://dookeela.live/uploads/1664499700.png"  ,True Premier Football 5
+#EXTVLCOPT:http-referrer=https://streaming.livescorethai.net/
+https://streaming.livescorethai.net/iptv/epl-5.stream/playlist.m3u8?wmsAuthSign=
+
 #EXTINF:-1 group-title="True Visions" tvg-logo="https://dookeela.live/uploads/1664802455.png"  ,True Sport HD 1 (TH)
 #EXTVLCOPT:http-referrer=https://streaming.livescorethai.net/
 https://streaming.livescorethai.net/iptv/hd-tsport1.stream/playlist.m3u8?wmsAuthSign=
@@ -539,26 +559,6 @@ https://streaming.livescorethai.net/iptv/sd-tsport5.stream/playlist.m3u8?wmsAuth
 #EXTINF:-1 group-title="True Visions" tvg-logo="https://dookeela.live/uploads/1664847921.png"  ,True Sport 7 (TH)
 #EXTVLCOPT:http-referrer=https://streaming.livescorethai.net/
 https://streaming.livescorethai.net/iptv/sd-tsport7.stream/playlist.m3u8?wmsAuthSign=
-
-#EXTINF:-1 tvg-id="TruePremierFootball1.th" group-title="True Visions" tvg-logo="https://dookeela.live/uploads/1664499665.png"  ,TTrue Premier Football 1
-#EXTVLCOPT:http-referrer=https://streaming.livescorethai.net/
-https://streaming.livescorethai.net/iptv/epl-1.stream/playlist.m3u8?wmsAuthSign=
-
-#EXTINF:-1 tvg-id="TruePremierFootball2.th" group-title="True Visions" tvg-logo="https://dookeela.live/uploads/1664499673.png"  ,True Premier Football 2
-#EXTVLCOPT:http-referrer=https://streaming.livescorethai.net/
-https://streaming.livescorethai.net/iptv/epl-2.stream/playlist.m3u8?wmsAuthSign=
-
-#EXTINF:-1 tvg-id="TruePremierFootball3.th" group-title="True Visions" tvg-logo="https://dookeela.live/uploads/1664499681.png"  ,True Premier Football 3
-#EXTVLCOPT:http-referrer=https://streaming.livescorethai.net/
-https://streaming.livescorethai.net/iptv/epl-3.stream/playlist.m3u8?wmsAuthSign=
-
-#EXTINF:-1 tvg-id="TruePremierFootball4.th" group-title="True Visions" tvg-logo="https://dookeela.live/uploads/1664499692.png"  ,True Premier Football 4
-#EXTVLCOPT:http-referrer=https://streaming.livescorethai.net/
-https://streaming.livescorethai.net/iptv/epl-4.stream/playlist.m3u8?wmsAuthSign=
-
-#EXTINF:-1 tvg-id="TruePremierFootball5.th" group-title="True Visions" tvg-logo="https://dookeela.live/uploads/1664499700.png"  ,True Premier Football 5
-#EXTVLCOPT:http-referrer=https://streaming.livescorethai.net/
-https://streaming.livescorethai.net/iptv/epl-5.stream/playlist.m3u8?wmsAuthSign=
 
 #EXTINF:-1 group-title="True Visions" tvg-logo="https://dookeela.live/uploads/1664529562.png"  ,True SPOTV1
 #EXTVLCOPT:http-referrer=https://www.dooball2you.com/
@@ -591,7 +591,30 @@ https://cdn1.googlecdn.live/dooballrealtime/trueballthai4/playlist.m3u8
 =========================================== True Sport (สำรอง) ===========================================
 #EXTINF:-1 group-logo="https://raw.githubusercontent.com/powmetal/Powermetal/main/PowerMetal/Assets/logo/SPORTS%20True.jpg"
 
+================================================ iamtheme ====================================================
 
+#EXTINF:-1 tvg-id="premier1.iptv36.my.to" group-title="True Sport (สำรอง)" tvg-logo="https://api-soccer.thai-play.com/images/tv/FxKl1hWHCcaRmo9ZOIiE2HnUJygUQCNTrue_Premier_Football_HD_1.png",True Premier Football 1
+#EXTVLCOPT:http-referrer=https://live-demo.iamtheme.com/
+https://dolive.thaim3u.com/tFQe38qxw4awKkMJD3kcfcekVSrfLnY9/siamsport-1/playlist.m3u8
+
+#EXTINF:-1 group-title="True Sport (สำรอง)" tvg-logo="https://api-soccer.thai-play.com/images/tv/8cdpTAZzt5KNu2QcIpOSJbKsBZHCXfHa1819.png",True Premier Football 2
+#EXTVLCOPT:http-referrer=https://live-demo.iamtheme.com/
+https://dolive.thaim3u.com/tFQe38qxw4awKkMJD3kcfcekVSrfLnY9/siamsport-2/playlist.m3u8
+
+#EXTINF:-1 group-title="True Sport (สำรอง)" tvg-logo="https://api-soccer.thai-play.com/images/tv/Nm0iqmsKCLZBxlYShlSp702TjLUpEFkTrue_Premier_Football_HD_3.png",True Premier Football 3
+#EXTVLCOPT:http-referrer=https://live-demo.iamtheme.com/
+https://dolive.thaim3u.com/tFQe38qxw4awKkMJD3kcfcekVSrfLnY9/siamsport-3/playlist.m3u8
+
+#EXTINF:-1 group-title="True Sport (สำรอง)" tvg-logo="https://api-soccer.thai-play.com/images/tv/w3dj8zkTukWC49JZSm1kzXqIa3lDljitv-station-true-premier-football-4-1821.png",True Premier Football 4
+#EXTVLCOPT:http-referrer=https://live-demo.iamtheme.com/
+https://dolive.thaim3u.com/tFQe38qxw4awKkMJD3kcfcekVSrfLnY9/siamsport-4/playlist.m3u8
+
+#EXTINF:-1 group-title="True Sport (สำรอง)" tvg-logo="https://api-soccer.thai-play.com/images/tv/lU31HrjVOMsrvGp7AVNSvQTX1JleH8ntv-station-true-premier-football-5-1822.png",True Premier Football 5
+#EXTVLCOPT:http-referrer=https://live-demo.iamtheme.com/
+https://dolive.thaim3u.com:443/tFQe38qxw4awKkMJD3kcfcekVSrfLnY9/siamsport-5/playlist.m3u8
+
+
+================================================ wacth TV ====================================================
 
 #EXTINF:-1 tvg-name="" tvg-id="" tvg-logo="https://wacth.officebk.co/uploads/tv_image/20220113134033true-premier-hd1.png" group-title="True Sport (สำรอง)",true-premier-hd1
 #EXTVLCOPT:http-referrer=https://wacth.tv
