--- a/PowerMetal/MetalPowOTT/METALPOWOTT.html
+++ b/PowerMetal/MetalPowOTT/METALPOWOTT.html
@@ -1082,7 +1082,7 @@ https://webhdrus.onlinehdhls.ru/lb/premium65/index.m3u8
 #EXTVLCOPT:http-user-agent=Mozilla/5.0 (iPhone; CPU iPhone OS 13_2_3 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.0.3 Mobile/15E148 Safari/604.1
 https://webhdrus.onlinehdhls.ru/lb/premium60/index.m3u8
 
-#EXTINF:-1 group-title="Sky Sports" tvg-id="skysport.it" tvg-logo="https://www.thesportsdb.com/images/media/channel/logo/693fja1595133458.png", Sky Sport Motogp (IT)
+#EXTINF:-1 group-title="Sky Sports" tvg-id="skysport.it" tvg-logo="https://img2.sport-tv-guide.live/images/tv-station-sky-sport-motogp-360.png", Sky Sport Motogp (IT)
 #EXTVLCOPT:http-referrer=https://weblivehdplay.ru/premiumtv/daddyhd.php
 #EXTVLCOPT:http-user-agent=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/108.0.0.0 Safari/537.36
 https://webhdrus.onlinehdhls.ru/lb/premium575/index.m3u8
@@ -1102,7 +1102,7 @@ https://webhdrus.onlinehdhls.ru/lb/premium70/index.m3u8
 #EXTVLCOPT:http-user-agent=Mozilla/5.0 (iPhone; CPU iPhone OS 13_2_3 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.0.3 Mobile/15E148 Safari/604.1
 https://webhdrus.onlinehdhls.ru/lb/premium38/index.m3u8
 
-#EXTINF:-1 group-title="Sky Sports" tvg-logo="https://www.lyngsat.com/logo/tv/ss/sky-sports-mix-uk.svg", Sky Sports Mix
+#EXTINF:-1 group-title="Sky Sports" tvg-logo="https://upload.wikimedia.org/wikipedia/commons/b/b8/Sky-sports-main-mix.jpg", Sky Sports Mix
 #EXTVLCOPT:http-user-agent=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/111.0.0.0 Safari/537.36 Edg/111.0.1661.43
 #EXTVLCOPT:http-referrer=https://weblivehdplay.ru/premiumtv/daddyhd.php
 https://webhdrus.onlinehdhls.ru/lb/premium449/index.m3u8
