--- a/PowerMetal/MetalPowOTT/METALPOWOTT.html
+++ b/PowerMetal/MetalPowOTT/METALPOWOTT.html
@@ -1050,6 +1050,11 @@ https://webhdrus.onlinehdhls.ru/lb/premium368/index.m3u8
 #EXTVLCOPT:http-user-agent=Mozilla/5.0 (iPhone; CPU iPhone OS 13_2_3 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.0.3 Mobile/15E148 Safari/604.1
 https://webhdrus.onlinehdhls.ru/lb/premium413/index.m3u8
 
+#EXTINF:-1 tvg-id="PTV Sports" tvg-logo="https://w7.pngwing.com/pngs/13/246/png-transparent-logo-ptv-sports-television-channel-pakistan-cricket-television-text-trademark.png" group-title="⚽ SPORTS WORLD" , PTV Sports
+#KODIPROP:inputstream.adaptive.manifest_type=mpd
+#KODIPROP:inputstream.adaptive.license_type=clearkey
+#KODIPROP:inputstream.adaptive.license_key=9ecad6c4413f8bdc54712ce6c072a2cf:442df559c369bdada8ba3abe97811575
+https://live4.shoq.com.pk/live/eds/PTV_Sports/DASH/PTV_Sports.mpd
 
 
 <----##### WWE Network #####---->
