--- a/PowerMetal/MetalPowOTT/METALPOWOTT.html
+++ b/PowerMetal/MetalPowOTT/METALPOWOTT.html
@@ -807,7 +807,7 @@ https://media.wacthstream.com/stream_live/676_golfplus/playlist.m3u8?wmsAuthSign
 
 
 ======================================== Movies&Series ========================================
-#EXTINF:-1 group-logo="https://yt3.googleusercontent.com/Vox8xZotNKqVBo5sqMQ4N4a3SR5lJFY5h0vsGYXrDvQuzDXbmCynxPPgQsU7RJtmqvz5twH3=s900-c-k-c0x00ffffff-no-rj"
+#EXTINF:-1 group-logo="https://i.pinimg.com/736x/fa/1f/f7/fa1ff7ddd23d6e9ef97eea16f1342258.jpg"
 
 
 
@@ -829,7 +829,7 @@ http://49.0.87.24:1936/HDDragon/Dragon/playlist.m3u8
 
 
 ======================================== MVTV ========================================
-#EXTINF:-1 group-logo="https://media-mvtv-app.imgix.net/uploads/channel/172_y_atuXbnjTpOPYg4c7FCq3SBQmZKGlHrdv.png"
+#EXTINF:-1 group-logo="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQP2cNTg_1nEfvX7gCm4U4tb57mhLB0c1OE_w&s"
 
 
 
