--- a/PowerMetal/MetalPowOTT/METALPOWOTT.html
+++ b/PowerMetal/MetalPowOTT/METALPOWOTT.html
@@ -216,5 +216,5 @@
 
 =========================================== MetalPow logo ===========================================
 #EXTINF:-1 group-logo="https://raw.githubusercontent.com/powmetal/Powermetal/main/PowerMetal/Assets/%E0%B9%82%E0%B8%A5%E0%B9%82%E0%B8%81%E0%B9%89.jpg" 
-#EXTINF:-1 " tvg-id="" tvg-logo="https://raw.githubusercontent.com/powmetal/Powermetal/main/PowerMetal/Assets/%E0%B9%82%E0%B8%A5%E0%B9%82%E0%B8%81%E0%B9%89.jpg" group-title="ℹ️| โปรดติดต่อแอพมินเพื่อขอท่อยู่ใหม่
+#EXTINF:-1 " tvg-id="" tvg-logo="https://raw.githubusercontent.com/powmetal/Powermetal/main/PowerMetal/Assets/%E0%B9%82%E0%B8%A5%E0%B9%82%E0%B8%81%E0%B9%89.jpg" group-title="ℹ️| โปรดติดต่อแอพมินเพื่อขอท่อยู่ใหม่"
 https://livestream.zazerconer.workers.dev/channel/UCpYye8D5fFMUPf9nSfgd4bA.m3u8
