--- a/PowerMetal/MetalPowOTT/METALPOWOTT.html
+++ b/PowerMetal/MetalPowOTT/METALPOWOTT.html
@@ -212,7 +212,7 @@
 
 
 #EXTM3U
-#EXTM3U billed-msg=" LineID: taltim ------ โปรดติดต่อแอดมินเพื่อขอที่อยู่ใหม่
+#EXTM3U billed-msg=" LineID: taltim ------ โปรดติดต่อแอดมินเพื่อขอที่อยู่ใหม่ "
 
 =========================================== MetalPow logo ===========================================
 #EXTINF:-1 group-logo="https://raw.githubusercontent.com/powmetal/Powermetal/main/PowerMetal/Assets/%E0%B9%82%E0%B8%A5%E0%B9%82%E0%B8%81%E0%B9%89.jpg" 
